--- a/web_app.css
+++ b/web_app.css
@@ -160,8 +160,9 @@ html {
     height: 4vw;
     z-index: 60;
     position: absolute;
-    top: 0.2vw;
-    right: -10% !important;
+    margin: auto;
+    right: 4.7vw !important;
+    top: 3vw !important;
 
     background-color: rgb(177, 18, 18);
     border-radius: 100%;
@@ -207,7 +208,8 @@ html {
     z-index: 5;
 
     outline: red solid 0.2vw;
-
+    outline: none;
+    
 }
 
 .button_a {
@@ -243,7 +245,7 @@ html {
     background-color: none;
     display: block;
     border-radius: 100%;
-    outline:none;
+    outline: none;
     z-index: 5;
     transition: 0.2s 0s ease-out;
     border: none;
@@ -286,7 +288,7 @@ html {
 }
 
 .button_a:hover {
-    scale: 115%;
+    scale: 135%;
     background-color: rgb(255, 187, 103);
 }
 
@@ -1059,6 +1061,9 @@ html {
     box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4);
     transition-duration: 3s;
     transition-delay: 0.5s;
+    background-size: cover;
+    outline: white outset 0.5vw;
+    border: black 0.2vw outset;
 
 
 
@@ -1082,7 +1087,7 @@ html {
 .section_type2 {
     aspect-ratio: 3 / 2;
     height: 30vw;
-    background-size: contain;
+    background-size: cover;
     top: 0;
     bottom: 0;
     left: 24vw;
@@ -1103,7 +1108,7 @@ html {
     background-size: contain;
     top: 0;
     bottom: 0;
-    left: -1.65vw;
+    left: -1.5vw;
     right: 0;
     margin: auto;
     position: absolute;
@@ -1128,7 +1133,29 @@ html {
 .badge {
     width: 100%;
     aspect-ratio: 1/1;
-    outline: green 0.2vw solid;
+    background-color: rgb(255, 94, 94);
+    outline: rgb(255, 211, 50) 0.7vw outset;
+    border: 0.5vw ridge red;
+    border-radius: 100%;
+    transition-duration: 0.5s;
+    box-shadow: inset -1vw -1.5vw 0 rgba(255, 0, 0, 0.326), 1vw 1vw 0vw black;
+    filter: brightness(0.7);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+.badge:active {
+    scale: 80%;
+    transition-duration: 0.1s;
+
+
+}
+
+.badge:hover{
+    filter: brightness(1.0);
+    transition-duration: 0.25s;
+    box-shadow: inset -1vw -1.5vw 0 rgba(255, 0, 0, 0.326), -1vw -1vw 0vw black;
+    rotate: 360deg;
 
 }
 
@@ -1163,8 +1190,6 @@ html {
 
 
 .BADGESslider {
-    width: 100%;
-    height: 100%;
     background-color: rgba(255, 0, 0, 0.349);
 
 
